# document_portal_portfolio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  versions.py
.github/workflows/: aws.yaml  ci.yaml  task_definition.json
api/: README.md  main.py
archive/: archived_Dockerfile.txt
archive/github_workflows/: aws.yml
archive/src/document_analyzer/: README.md  data_analysis.py  data_ingestion.py
archive/src/document_compare/: README.md  data_ingestion.py  document_comparator.py  getbuffer_explained.md
archive/src/multi_document_chat/: data_ingestion.py  itemgetter_explanation.md  retrieval.py
archive/src/single_document_chat/: data_ingestion.py  notes.md  retrieval.py
deepeval_evaluation/: deepeval_rag_eval.ipynb  goldens.json  rag_deepeval_utils.py
exception/: custom_exception_archive.py
logger/: README.md  custom_logger.py  custom_logger_archive.py  logger_console_file.py
model/: README.md  models.py
prompt/: prompt_library.py
src/document_ingestion/: data_ingestion.py
templates/: index.html
test_archived/: test_DocumentComparison.py  test_DocumentHandler_DocumentAnalyzer.py  test_MultiDocChat.py  test_SingleChat.py
tests/: pytest.ini  test_integration.py  test_unit_cases.py  test_unit_integration_cases.py
utils/: document_ops.py  file_io.py  model_loader.py  ocr_content_extractor.py  supported_extensions.py
