[project]
name = "document-portal-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py==1.0.9",
    "cfn-lint>=1.39.1",
    "deepeval==3.4.8",
    "docx2txt==0.9",
    "easyocr==1.7.2",
    "faiss-cpu==1.11.0.post1",
    "fastapi==0.116.1",
    "ipykernel==6.30.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-experimental==0.3.4",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "pre-commit==4.3.0",
    "pymupdf==1.26.3",
    "pypdf==5.8.0",
    "pytest==8.4.1",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "python-pptx==1.0.2",
    "sqlalchemy==2.0.43",
    "streamlit==1.47.1",
    "structlog==25.4.0",
    "unstructured==0.18.14",
    "uvicorn==0.35.0",
]
